<resources>
    <string name="app_name">PineApple</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pineApple">PineApple</string>
    <string name="search">Search by name</string>
    <string name="filter">Categories</string>
    <string name="search_button">Search</string>
    <string name="restName">Restaurant name</string>
    <string name="listRes">All restaurants</string>
    <string name="categoryDetail">Malaysian, halal, spice, western</string>
    <string name="reviewRes">Reviews: Average %.2f out of 5.0 </string>
    <string name="table">Book a table</string>
    <string name="order">Order</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="messageDialog">Select date and time</string>
    <string name="toast">Hurray! The reservation at %s is made successfully!</string>
    <string name="error_toast">Something went wrong! Let\'s try later</string>
    <string name="book">Reserve</string>
    <string name="cancel">Cancel </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nothing">No ratings yet</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu">Menu</string>
    <string name="add">Add</string>
    <string name="ho_many_people">How many people?</string>
    <string name="pineapple">PineApple</string>
</resources>