<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        app:layoutDescription="@xml/fragment_feed_xml_relativelayout3_scene"
        tools:context=".FeedFragment"
        >

        <ImageView
            android:id="@+id/background_yellow"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:src="@drawable/background_yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="360dp"
            android:src="@mipmap/user_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/d_line1"
            android:layout_width="500dp"
            android:layout_height="1dp"
            android:src="@drawable/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_icon" />


        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/pine_apple"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/d_line1" />

        <TextView
            android:id="@+id/logoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/logo"
            android:gravity="center"
            android:text="@string/pineApple"
            android:textSize="@dimen/margin_medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <ImageView
            android:id="@+id/d_line"
            android:layout_width="500dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoName" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/search"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoName" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/search_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input" />

        <TextView
            android:id="@+id/list_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listRes"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleRes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_res" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</ScrollView>